# corrector-1.0.0

./: .gitignore  README.md  RunCorrector.hs  corrector.cabal
src/: Corrector.hs
test/: TestCorrector.hs
