name:           corrector
version:        1.0.0
synopsis:       A simple spelling corrector
build-type:     Simple
cabal-version:  >= 1.10
category:       System


extra-source-files:
  README.md

library
  hs-source-dirs: src
  exposed-modules:
    Corrector
  build-depends:
    array
   ,base < 5
   ,binary 
   ,bytestring
   ,containers
   ,directory
   ,filepath
  default-language: Haskell2010
  ghc-options: -Wall -O2 -fforce-recomp -rtsopts "-with-rtsopts=-K300m"

executable corrector
  main-is: RunCorrector.hs
  build-depends:
    array
   ,base < 5
   ,binary
   ,containers
   ,corrector
   ,directory
   ,filepath
  default-language: Haskell2010
  ghc-options: -Wall -O2 -fforce-recomp -rtsopts "-with-rtsopts=-K300m"

test-suite test-corrector
  hs-source-dirs: test
  main-is: TestCorrector.hs
  type: exitcode-stdio-1.0
  build-depends:
    base < 5
   ,bytestring 
   ,corrector
   ,hspec
   ,QuickCheck > 2.5
  default-language: Haskell2010
  ghc-options: -Wall -O2 -fforce-recomp -rtsopts "-with-rtsopts=-K300m"

